# stream2graph

./: .env  .env.example  .gitignore  README.md  VERSION_INDEX.md  docker-compose.platform.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.githooks/: pre-commit
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_platform.py
apps/api/app/: __init__.py  config.py  db.py  legacy.py  main.py  models.py  schemas.py  security.py  worker.py
apps/api/app/routers/: auth.py  catalog.py  realtime.py  reports.py  runs.py  studies.py
apps/api/app/services/: __init__.py  catalog.py  reports.py  runs.py  runtime_sessions.py  studies.py
apps/api/stream2graph_platform_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_api_workflows.py  test_catalog.py  test_realtime_contracts.py  test_runs_workflow.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
configs/dialogue_regen/: pilot_matrix_candidates_v1.example.json  reference_dialogue_smoke.json  reference_dialogue_smoke_suite.json
configs/evaluation/: README.md  benchmark_report_release_test_smoke.json  eval_suite_release_test_smoke.json  gemini31pro_v7_sharded_4way.example.json  (+14 more)
docs/: README.md
requirements/: finetune.txt  wsl.txt
scripts/: dev-down.sh  dev-status.sh  dev-up.sh
tools/: build_release_v3.py  build_release_v4.py  generate_change_report.py  realtime_frontend_server.py  repair_and_rebuild_v3.py  unified_pretrain_eval.py
workspace_archive/: README.md
(+67234 files in other folders)
