[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream2graph-platform-api"
version = "0.1.0"
description = "Formal Stream2Graph platform API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "passlib>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.3.2"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
